[tool.poetry]
name = "tarifasaereas"
version = "0.1.0"
description = ""
authors = ["SousaPedroso", "Menichini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
apache-airflow = "2.9.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
